Sonar suggested updates